# OmniCursor

./: .coverage  .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
src/ai_chat_assistant/: __init__.py  __main__.py
tests/: __init__.py  test_main.py  test_screenshots.py
